# CommuteSoftWare

./: 051810217-杨通达-建立聊天工具.doc
client_system/: CMakeLists.txt  main.cpp
server_release/: Makefile  untitled.cbp
server_system/: CMakeLists.txt  ClioneData.cpp  ClioneData.h  MssPrss.cpp  MssPrss.h  ServerData.cpp  ServerData.h  client.cpp  main.cpp  mycat.c  mycp.c  myecho.c  mysys.c  serve.cpp
ui/: CMakeLists.txt
ui/build-qqclient-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.qqclient.Debug  object_script.qqclient.Release  ui_chatwindow.h  ui_cw.h  ui_errorshow.h  ui_mainwindow.h
ui/build-qqclient-Desktop_Qt_5_9_0_MinGW_32bit-Debug/debug/: moc_commutewindow.cpp  moc_cw.cpp  moc_errorshow.cpp  moc_mainwindow.cpp
ui/build-qqclient-Desktop_Qt_5_9_0_MinGW_32bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.qqclient.Release
ui/build-qqclient-Desktop_Qt_5_9_0_MinGW_32bit-Release/release/: moc_chatwindow.cpp  moc_mainwindow.cpp  moc_networksocket.cpp
ui/communication/: communication.pro  mainwindow.ui
ui/qqclient/: chatwindow.cpp  chatwindow.h  chatwindow.ui  commutewindow.cpp  commutewindow.h  commutewindow.ui  cw.cpp  cw.h  cw.ui  errorshow.cpp  errorshow.h  errorshow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  networksocket.cpp  networksocket.h  networksocket.h.autosave  qqclient.pro
